ffxiv-diff/5.3/index.md
---
title: FFXIV Diff Tables
---
## 5.3

[← return to patch list](https://makar8000.github.io/ffxiv-diff/)

| Sheet | Inserts | Updates | Deletes | Reorders |
| :---- | ------: | ------: | ------: | -------: |
| [AchievementCategory](AchievementCategory) |       2 |       0 |       0 |        0 |
| [Achievement](Achievement) |     106 |     140 |       0 |        0 |
| [ActionCastTimeline](ActionCastTimeline) |       4 |       0 |       0 |        0 |
| [ActionCastVFX](ActionCastVFX) |      13 |       0 |       0 |        0 |
| [ActionCategory](ActionCategory) |       0 |       1 |       0 |        0 |
| [ActionComboRoute](ActionComboRoute) |       3 |       0 |       0 |        0 |
| [ActionParam](ActionParam) |       0 |       4 |       0 |        0 |
| [ActionTimeline](ActionTimeline) |    1044 |      84 |       0 |        0 |
| [ActionTransient](ActionTransient) |    1300 |      76 |       0 |        0 |
| [Action](Action) |    1300 |     571 |       0 |        0 |
| [ActivityFeedImages](ActivityFeedImages) |       5 |       1 |       0 |        0 |
| [Addon](Addon) |     257 |      28 |       0 |        0 |
| [AetherCurrentCompFlgSet](AetherCurrentCompFlgSet) |       0 |       1 |       0 |        0 |
| [AetherCurrent](AetherCurrent) |      12 |       0 |       0 |        0 |
| [AquariumFish](AquariumFish) |      10 |       0 |       0 |        0 |
| [ArrayEventHandler](ArrayEventHandler) |      35 |      60 |      20 |        0 |
| [BGMSituation](BGMSituation) |      11 |       0 |       0 |        0 |
| [BGMSwitch](BGMSwitch) |      65 |      56 |       0 |        0 |
| [BGM](BGM) |      31 |       0 |       0 |        0 |
| [BNpcBase](BNpcBase) |     500 |     140 |       0 |        0 |
| [BNpcCustomize](BNpcCustomize) |      50 |      23 |       0 |        0 |
| [BNpcName](BNpcName) |     250 |       6 |       0 |        0 |
| [Balloon](Balloon) |     399 |       8 |       0 |        0 |
| [BeastRankBonus](BeastRankBonus) |       1 |       0 |       0 |        0 |
| [BeastTribe](BeastTribe) |       1 |       2 |       0 |        0 |
| [Behavior](Behavior) |    3688 |     437 |    1416 |        0 |
| [BuddyEquip](BuddyEquip) |       0 |       1 |       0 |        0 |
| [Cabinet](Cabinet) |       0 |       6 |       0 |        0 |
| [Channeling](Channeling) |      12 |       1 |       0 |        0 |
| [CharaMakeCustomize](CharaMakeCustomize) |       0 |      28 |       0 |        0 |
| [ClassJobCategory](ClassJobCategory) |      17 |       1 |       0 |        0 |
| [CompanionTransient](CompanionTransient) |      16 |       6 |       0 |        0 |
| [Companion](Companion) |      16 |      22 |       0 |        0 |
| [CompanyCraftDraft](CompanyCraftDraft) |       1 |       0 |       0 |        0 |
| [CompanyCraftPart](CompanyCraftPart) |      10 |       0 |       0 |        0 |
| [CompanyCraftProcess](CompanyCraftProcess) |      22 |       0 |       0 |        0 |
| [CompanyCraftSequence](CompanyCraftSequence) |       3 |       4 |       0 |        0 |
| [CompanyCraftSupplyItem](CompanyCraftSupplyItem) |       2 |       0 |       0 |        0 |
| [CompleteJournalCategory](CompleteJournalCategory) |       1 |      64 |       0 |        0 |
| [CompleteJournal](CompleteJournal) |     112 |    5908 |       0 |        0 |
| [Condition](Condition) |       0 |       4 |       0 |        0 |
| [ConfigKey](ConfigKey) |       2 |      58 |       0 |        0 |
| [ContentCloseCycle](ContentCloseCycle) |       1 |       3 |       0 |        0 |
| [ContentExAction](ContentExAction) |       1 |       0 |       0 |        0 |
| [ContentFinderConditionTransient](ContentFinderConditionTransient) |       8 |       2 |       0 |        0 |
| [ContentFinderCondition](ContentFinderCondition) |       8 |     716 |       0 |        0 |
| [ContentGauge](ContentGauge) |       1 |       0 |       0 |        0 |
| [ContentNpcTalk](ContentNpcTalk) |      11 |       0 |       0 |        0 |
| [ContentRandomSelect](ContentRandomSelect) |       0 |       9 |       0 |        0 |
| [ContentRoulette](ContentRoulette) |       0 |      24 |       0 |        0 |
| [ContentTalk](ContentTalk) |      36 |       0 |       0 |        0 |
| [ContentType](ContentType) |       1 |       7 |       0 |        0 |
| [ContentsNote](ContentsNote) |       0 |       2 |       0 |        0 |
| [Currency](Currency) |       1 |       1 |       0 |        0 |
| [CustomTalkNestHandlers](CustomTalkNestHandlers) |       6 |       0 |       0 |        0 |
| [CustomTalk](CustomTalk) |      22 |      30 |       0 |        0 |
| [CutScreenImage](CutScreenImage) |      10 |       0 |       0 |        0 |
| [CutsceneWorkIndex](CutsceneWorkIndex) |     100 |      12 |       0 |        0 |
| [Cutscene](Cutscene) |     100 |      60 |       0 |        0 |
| [DawnContent](DawnContent) |       1 |       0 |       0 |        0 |
| [DawnGrowMember](DawnGrowMember) |       3 |       0 |       0 |        0 |
| [DawnMemberUIParam](DawnMemberUIParam) |       1 |       0 |       0 |        0 |
| [DawnQuestAnnounce](DawnQuestAnnounce) |       1 |       0 |       0 |        0 |
| [DefaultTalk](DefaultTalk) |     280 |      12 |       0 |        0 |
| [DescriptionPage](DescriptionPage) |      37 |       2 |       0 |        0 |
| [DescriptionSection](DescriptionSection) |      12 |       0 |       0 |        0 |
| [DescriptionString](DescriptionString) |      80 |       2 |       0 |        0 |
| [Description](Description) |       5 |       0 |       0 |        0 |
| [DisposalShopItem](DisposalShopItem) |      17 |       0 |       0 |        0 |
| [DisposalShop](DisposalShop) |       1 |       0 |       0 |        0 |
| [DpsChallengeOfficer](DpsChallengeOfficer) |       0 |       1 |       0 |        0 |
| [DpsChallengeTransient](DpsChallengeTransient) |       1 |       0 |       0 |        0 |
| [DpsChallenge](DpsChallenge) |       1 |       0 |       0 |        0 |
| [ENpcBase](ENpcBase) |    1724 |     535 |       0 |        0 |
| [ENpcDressUpDress](ENpcDressUpDress) |       4 |      80 |       0 |        0 |
| [ENpcDressUp](ENpcDressUp) |       1 |       0 |       0 |        0 |
| [ENpcResident](ENpcResident) |    1724 |      85 |       0 |        0 |
| [EObjName](EObjName) |     123 |       1 |       2 |        0 |
| [EObj](EObj) |     123 |     128 |       2 |        0 |
| [EmjAddon](EmjAddon) |       0 |       5 |       0 |        0 |
| [EmoteMode](EmoteMode) |       1 |       5 |       0 |        0 |
| [Emote](Emote) |       0 |       4 |       0 |        0 |
| [EventItemHelp](EventItemHelp) |      40 |       4 |       0 |        0 |
| [EventItem](EventItem) |      40 |      10 |       0 |        0 |
| [EventSystemDefine](EventSystemDefine) |       0 |      22 |       2 |        0 |
| [ExportedSG](ExportedSG) |      75 |       2 |       0 |        0 |
| [FateEvent](FateEvent) |      10 |       1 |       0 |        0 |
| [FateTokenType](FateTokenType) |       1 |       0 |       0 |        0 |
| [Fate](Fate) |      70 |    1228 |       0 |        0 |
| [Festival](Festival) |      11 |       0 |       0 |        0 |
| [FishParameter](FishParameter) |     130 |     354 |       0 |        0 |
| [FishingSpot](FishingSpot) |       9 |      17 |       0 |        0 |
| [FurnitureCatalogItemList](FurnitureCatalogItemList) |      37 |       1 |       0 |        0 |
| [GCScripShopItem](GCScripShopItem) |       3 |       3 |       0 |        0 |
| [GardeningSeed](GardeningSeed) |       2 |       6 |       0 |        0 |
| [GatheringCondition](GatheringCondition) |       1 |       1 |       0 |        0 |
| [GatheringItemPoint](GatheringItemPoint) |      28 |      62 |       0 |        0 |
| [GatheringItem](GatheringItem) |      90 |       3 |       0 |        0 |
| [GatheringNotebookList](GatheringNotebookList) |       0 |      25 |       0 |        0 |
| [GatheringPointBase](GatheringPointBase) |      35 |       8 |       0 |        0 |
| [GatheringPointBonusType](GatheringPointBonusType) |       0 |       2 |       0 |        0 |
| [GatheringPointBonus](GatheringPointBonus) |       0 |      69 |       0 |        0 |
| [GatheringPointName](GatheringPointName) |       0 |       0 |       0 |        0 |
| [GatheringPointTransient](GatheringPointTransient) |     305 |       0 |       0 |        0 |
| [GatheringPoint](GatheringPoint) |     305 |     252 |       0 |        0 |
| [GatheringSubCategory](GatheringSubCategory) |      20 |       4 |       0 |        0 |
| [GilShopItem](GilShopItem) |     324 |       0 |       3 |        0 |
| [GilShop](GilShop) |      13 |       0 |       0 |        0 |
| [GimmickAccessor](GimmickAccessor) |      32 |       0 |       0 |        0 |
| [GimmickJump](GimmickJump) |       1 |       0 |       0 |        0 |
| [GimmickRect](GimmickRect) |      99 |       2 |       0 |        0 |
| [GroupPoseFrame](GroupPoseFrame) |       0 |      15 |       0 |        0 |
| [GuildleveAssignment](GuildleveAssignment) |       0 |       0 |       0 |        0 |
| [HWDAnnounce](HWDAnnounce) |      31 |       0 |       0 |        0 |
| [HWDCrafterSupplyReward](HWDCrafterSupplyReward) |      36 |       6 |       0 |        0 |
| [HWDCrafterSupply](HWDCrafterSupply) |       0 |       8 |       0 |        0 |
| [HWDDevLayerControl](HWDDevLayerControl) |      31 |       0 |       0 |        0 |
| [HWDDevLevelUI](HWDDevLevelUI) |      31 |       0 |       0 |        0 |
| [HWDDevLively](HWDDevLively) |     794 |      16 |      34 |        0 |
| [HWDDevProgress](HWDDevProgress) |     130 |       1 |       0 |        0 |
| [HWDGathererInspectionReward](HWDGathererInspectionReward) |      44 |      27 |       0 |        0 |
| [HWDGathererInspection](HWDGathererInspection) |       0 |       0 |       0 |        0 |
| [HWDInfoBoardArticleTransient](HWDInfoBoardArticleTransient) |      19 |       0 |       0 |        0 |
| [HWDInfoBoardArticle](HWDInfoBoardArticle) |      19 |       0 |       0 |        0 |
| [HWDLevelChangeDeception](HWDLevelChangeDeception) |      31 |       0 |       0 |        0 |
| [HWDSharedGroupControlParam](HWDSharedGroupControlParam) |     122 |       1 |       0 |        0 |
| [HWDSharedGroup](HWDSharedGroup) |      48 |      24 |       2 |        0 |
| [HousingExterior](HousingExterior) |      12 |       0 |       0 |        0 |
| [HousingFurniture](HousingFurniture) |      41 |       1 |       0 |        0 |
| [HousingPlacement](HousingPlacement) |       0 |       2 |       0 |        0 |
| [HousingUnitedExterior](HousingUnitedExterior) |       3 |       0 |       0 |        0 |
| [HousingYardObject](HousingYardObject) |       8 |       0 |       0 |        0 |
| [HowToPage](HowToPage) |       2 |       3 |       0 |        0 |
| [HowTo](HowTo) |       4 |       3 |       0 |        0 |
| [IndividualWeather](IndividualWeather) |       0 |       7 |       0 |        0 |
| [InstanceContentGuide](InstanceContentGuide) |       3 |       0 |       0 |        0 |
| [InstanceContentTextData](InstanceContentTextData) |     463 |       3 |       0 |        0 |
| [InstanceContent](InstanceContent) |      10 |     272 |       0 |        0 |
| [ItemAction](ItemAction) |     300 |       7 |       0 |        0 |
| [Item](Item) |     714 |   31000 |       0 |        0 |
| [JournalCategory](JournalCategory) |       1 |      74 |       0 |        0 |
| [JournalGenre](JournalGenre) |       2 |     199 |       0 |        0 |
| [Knockback](Knockback) |       7 |       1 |       0 |        0 |
| [LegacyQuest](LegacyQuest) |       0 |     295 |       0 |        0 |
| [Leve](Leve) |       0 |    1518 |       0 |        0 |
| [Level](Level) |     609 |    1931 |      28 |        0 |
| [Lobby](Lobby) |       0 |       8 |       0 |        0 |
| [LogMessage](LogMessage) |       0 |      81 |       0 |        0 |
| [LotteryExchangeShop](LotteryExchangeShop) |       2 |       4 |       0 |        0 |
| [MainCommand](MainCommand) |       2 |      14 |       0 |        0 |
| [MapMarker](MapMarker) |     156 |      13 |       0 |        0 |
| [MapSymbol](MapSymbol) |       4 |       1 |       0 |        0 |
| [Map](Map) |      19 |       6 |       0 |        0 |
| [ModelChara](ModelChara) |     300 |     128 |       0 |        0 |
| [ModelSkeleton](ModelSkeleton) |      25 |       0 |       3 |        0 |
| [ModelState](ModelState) |       0 |       3 |       0 |        0 |
| [MotionTimelineBlendTable](MotionTimelineBlendTable) |       1 |       0 |       0 |        0 |
| [MotionTimeline](MotionTimeline) |       0 |      69 |       0 |        0 |
| [MountAction](MountAction) |       2 |       0 |       0 |        0 |
| [MountCustomize](MountCustomize) |       6 |       1 |       0 |        0 |
| [MountFlyingCondition](MountFlyingCondition) |       0 |       1 |       0 |        0 |
| [MountTransient](MountTransient) |      14 |       3 |       0 |        0 |
| [Mount](Mount) |      14 |       6 |       0 |        0 |
| [NotebookDivisionCategory](NotebookDivisionCategory) |       1 |       0 |       0 |        0 |
| [NotebookDivision](NotebookDivision) |       7 |       4 |       0 |        0 |
| [NpcEquip](NpcEquip) |      90 |      40 |       0 |        0 |
| [NpcYell](NpcYell) |    1000 |      41 |       0 |        0 |
| [Omen](Omen) |      20 |       0 |       0 |        0 |
| [OnlineStatus](OnlineStatus) |       0 |       2 |       0 |        0 |
| [OpenContentCandidateName](OpenContentCandidateName) |       1 |       0 |       0 |        0 |
| [OpenContent](OpenContent) |       0 |       1 |       0 |        0 |
| [OrchestrionCategory](OrchestrionCategory) |       0 |       1 |       0 |        0 |
| [OrchestrionPath](OrchestrionPath) |      27 |       0 |       0 |        0 |
| [OrchestrionUiparam](OrchestrionUiparam) |      27 |      20 |       0 |        0 |
| [Orchestrion](Orchestrion) |      27 |       6 |       0 |        0 |
| [PatchMark](PatchMark) |       0 |       2 |       0 |        0 |
| [PerformTransient](PerformTransient) |       1 |       0 |       0 |        0 |
| [Perform](Perform) |       1 |       0 |       0 |        0 |
| [Picture](Picture) |       0 |       0 |       0 |        0 |
| [PlaceName](PlaceName) |     108 |       4 |       0 |        0 |
| [PlantPotFlowerSeed](PlantPotFlowerSeed) |       1 |       0 |       0 |        0 |
| [PreHandler](PreHandler) |      55 |       0 |       0 |        0 |
| [PublicContentCutscene](PublicContentCutscene) |       1 |       2 |       0 |        0 |
| [PublicContentTextData](PublicContentTextData) |     131 |       0 |       0 |        0 |
| [PublicContent](PublicContent) |       1 |       1 |       0 |        0 |
| [Purify](Purify) |       3 |       0 |       0 |        0 |
| [PvPActionSort](PvPActionSort) |       0 |       3 |       0 |        0 |
| [QuestBattle](QuestBattle) |       0 |       1 |       0 |        0 |
| [QuestChapter](QuestChapter) |      97 |    1448 |       0 |        0 |
| [QuestClassJobReward](QuestClassJobReward) |      64 |       0 |       0 |        0 |
| [QuestDerivedClass](QuestDerivedClass) |      22 |      31 |       0 |        0 |
| [QuestRedoChapterUICategory](QuestRedoChapterUICategory) |      21 |       6 |       0 |        0 |
| [QuestRedoChapterUITab](QuestRedoChapterUITab) |       5 |       0 |       0 |        0 |
| [QuestRedoChapterUI](QuestRedoChapterUI) |       0 |      65 |       0 |        0 |
| [QuestRedoIncompChapter](QuestRedoIncompChapter) |      42 |       0 |       0 |        0 |
| [QuestRedo](QuestRedo) |       1 |      64 |       0 |        0 |
| [QuestRepeatFlag](QuestRepeatFlag) |       0 |       3 |       0 |        0 |
| [RPParameter](RPParameter) |       1 |       0 |       0 |        0 |
| [RecipeLookup](RecipeLookup) |     290 |       1 |      79 |        0 |
| [RecipeNotebookList](RecipeNotebookList) |      41 |     118 |      11 |        0 |
| [Recipe](Recipe) |     654 |    8257 |       0 |        0 |
| [RecommendContents](RecommendContents) |       3 |       0 |       0 |        0 |
| [Resident](Resident) |     962 |       0 |       0 |        0 |
| [RetainerTaskNormal](RetainerTaskNormal) |       0 |      27 |       0 |        0 |
| [RetainerTaskParameter](RetainerTaskParameter) |       0 |       1 |       0 |        0 |
| [RetainerTask](RetainerTask) |       0 |      27 |       0 |        0 |
| [SatisfactionNpc](SatisfactionNpc) |       1 |       0 |       0 |        0 |
| [SatisfactionSupplyReward](SatisfactionSupplyReward) |      12 |       0 |       0 |        0 |
| [SatisfactionSupply](SatisfactionSupply) |      27 |       0 |       0 |        0 |
| [ScenarioTreeTips](ScenarioTreeTips) |       1 |       5 |       0 |        0 |
| [ScenarioTree](ScenarioTree) |      12 |      37 |      54 |       37 |
| [ScreenImage](ScreenImage) |      99 |      13 |       0 |        0 |
| [SpecialShop](SpecialShop) |     240 |     478 |       0 |        0 |
| [StatusHitEffect](StatusHitEffect) |       1 |       0 |       0 |        0 |
| [StatusLoopVFX](StatusLoopVFX) |      37 |       0 |       0 |        0 |
| [Status](Status) |     110 |     275 |       0 |        0 |
| [Story](Story) |      12 |      19 |       0 |        0 |
| [SubmarineExploration](SubmarineExploration) |       0 |       9 |       0 |        0 |
| [SubmarineMap](SubmarineMap) |       1 |       0 |       0 |        0 |
| [SubmarineRank](SubmarineRank) |       5 |       0 |       0 |        0 |
| [SwitchTalk](SwitchTalk) |      31 |       0 |       0 |        0 |
| [TerritoryTypeTransient](TerritoryTypeTransient) |      14 |      22 |       0 |        0 |
| [TerritoryType](TerritoryType) |      14 |       9 |       0 |        0 |
| [TextCommand](TextCommand) |       7 |       8 |       0 |        0 |
| [Title](Title) |      27 |       0 |       0 |        0 |
| [TopicSelect](TopicSelect) |       0 |      26 |       0 |        0 |
| [TraitTransient](TraitTransient) |       0 |      11 |       0 |        0 |
| [Trait](Trait) |       0 |       8 |       0 |        0 |
| [Transformation](Transformation) |       0 |     279 |       0 |        0 |
| [Treasure](Treasure) |      30 |       8 |       0 |        0 |
| [TripleTriadCardResident](TripleTriadCardResident) |      11 |       0 |       0 |        0 |
| [TripleTriadCard](TripleTriadCard) |      11 |       0 |       0 |        0 |
| [TripleTriad](TripleTriad) |       3 |       0 |       0 |        0 |
| [VFX](VFX) |      61 |       0 |       0 |        0 |
| [VaseFlower](VaseFlower) |      27 |       5 |       0 |        0 |
| [WarpCondition](WarpCondition) |       3 |       0 |       0 |        0 |
| [WarpLogic](WarpLogic) |       1 |       1 |       0 |        0 |
| [Warp](Warp) |      21 |       0 |       0 |        0 |
| [WeaponTimeline](WeaponTimeline) |      14 |       1 |       0 |        0 |
| [WeatherRate](WeatherRate) |       3 |       0 |       0 |        0 |
| [Weather](Weather) |       1 |       1 |       0 |        0 |
| [WeeklyBingoOrderData](WeeklyBingoOrderData) |       0 |       5 |       0 |        0 |
| [WeeklyBingoRewardData](WeeklyBingoRewardData) |       0 |      75 |       0 |        0 |
| [World](World) |       1 |       1 |       0 |        0 |
| [YKW](YKW) |       4 |       0 |       0 |        0 |
| [YardCatalogItemList](YardCatalogItemList) |       5 |       0 |       0 |        0 |
| [ZoneSharedGroup](ZoneSharedGroup) |      17 |       0 |       0 |        0 |