ffxiv-diff/5.4/index.md
---
title: FFXIV Diff Tables
---
## 5.4

[← return to patch list](https://makar8000.github.io/ffxiv-diff/)

| Sheet | Inserts | Updates | Deletes | Reorders |
| :---- | ------: | ------: | ------: | -------: |
| [AOZBoss](AOZBoss) |       2 |       0 |       0 |        0 |
| [AOZContentBriefingBNpc](AOZContentBriefingBNpc) |       0 |       1 |       0 |        0 |
| [AOZContent](AOZContent) |       1 |       0 |       0 |        0 |
| [Achievement](Achievement) |     105 |      51 |       0 |        0 |
| [ActionCastTimeline](ActionCastTimeline) |      15 |       0 |       0 |        0 |
| [ActionCastVFX](ActionCastVFX) |      29 |       0 |       0 |        0 |
| [ActionTimelineMove](ActionTimelineMove) |      10 |       0 |       0 |        0 |
| [ActionTimeline](ActionTimeline) |     550 |     206 |       0 |        0 |
| [ActionTransient](ActionTransient) |     656 |      62 |       0 |        0 |
| [Action](Action) |     656 |    1160 |       0 |        0 |
| [ActivityFeedImages](ActivityFeedImages) |       3 |       0 |       0 |        0 |
| [Addon](Addon) |     269 |      30 |       0 |        0 |
| [AozActionTransient](AozActionTransient) |      24 |       1 |       0 |        0 |
| [AozAction](AozAction) |      24 |       0 |       0 |        0 |
| [AquariumFish](AquariumFish) |      10 |       0 |       0 |        0 |
| [ArrayEventHandler](ArrayEventHandler) |      16 |      15 |       6 |        0 |
| [BGMSwitch](BGMSwitch) |      12 |      29 |       0 |        0 |
| [BGM](BGM) |      16 |       0 |       0 |        0 |
| [BNpcBase](BNpcBase) |     500 |     179 |       0 |        0 |
| [BNpcCustomize](BNpcCustomize) |       0 |       6 |       0 |        0 |
| [BNpcName](BNpcName) |     250 |      11 |       0 |        0 |
| [BNpcParts](BNpcParts) |      10 |       1 |       0 |        0 |
| [Balloon](Balloon) |     391 |       1 |       0 |        0 |
| [Behavior](Behavior) |    3972 |    1149 |     496 |        0 |
| [BuddyEquip](BuddyEquip) |       8 |       1 |       0 |        0 |
| [Cabinet](Cabinet) |       0 |       6 |       0 |        0 |
| [Channeling](Channeling) |      22 |       0 |       0 |        0 |
| [CharaMakeCustomize](CharaMakeCustomize) |       0 |      28 |       0 |        0 |
| [ChocoboTaxiStand](ChocoboTaxiStand) |       0 |       2 |       0 |        0 |
| [CollectablesShopItemGroup](CollectablesShopItemGroup) |      10 |       0 |       0 |        0 |
| [CollectablesShopItem](CollectablesShopItem) |      56 |    1264 |       0 |        0 |
| [CollectablesShopRefine](CollectablesShopRefine) |       6 |       0 |       0 |        0 |
| [CollectablesShopRewardItem](CollectablesShopRewardItem) |      12 |       1 |       0 |        0 |
| [CollectablesShopRewardScrip](CollectablesShopRewardScrip) |      15 |     621 |       0 |        0 |
| [CollectablesShop](CollectablesShop) |       1 |       2 |       0 |        0 |
| [CompanionTransient](CompanionTransient) |      16 |       6 |       0 |        0 |
| [Companion](Companion) |      16 |      30 |       0 |        0 |
| [CompanyCraftDraft](CompanyCraftDraft) |       1 |       0 |       0 |        0 |
| [CompanyCraftPart](CompanyCraftPart) |      10 |       0 |       0 |        0 |
| [CompanyCraftProcess](CompanyCraftProcess) |      22 |       0 |       0 |        0 |
| [CompanyCraftSequence](CompanyCraftSequence) |       3 |       0 |       0 |        0 |
| [CompleteJournalCategory](CompleteJournalCategory) |       1 |      78 |       0 |        0 |
| [CompleteJournal](CompleteJournal) |     110 |    5983 |       0 |        0 |
| [Condition](Condition) |       0 |       1 |       0 |        0 |
| [ConfigKey](ConfigKey) |       0 |       1 |       0 |        0 |
| [ContentCloseCycle](ContentCloseCycle) |       1 |       0 |       0 |        0 |
| [ContentFinderConditionTransient](ContentFinderConditionTransient) |      30 |       5 |       0 |        0 |
| [ContentGauge](ContentGauge) |       4 |       0 |       0 |        0 |
| [ContentMemberType](ContentMemberType) |       2 |      26 |       0 |        0 |
| [ContentRoulette](ContentRoulette) |       0 |      35 |       0 |        0 |
| [ContentsNote](ContentsNote) |       0 |       5 |       0 |        0 |
| [CraftAction](CraftAction) |       0 |      16 |       0 |        0 |
| [CreditBackImage](CreditBackImage) |       0 |       0 |       0 |        0 |
| [CustomTalkDynamicIcon](CustomTalkDynamicIcon) |       3 |       0 |       0 |        0 |
| [CustomTalkNestHandlers](CustomTalkNestHandlers) |       3 |       0 |       0 |        0 |
| [CustomTalk](CustomTalk) |      15 |     678 |       0 |        0 |
| [CutScreenImage](CutScreenImage) |      15 |       0 |       0 |        0 |
| [CutsceneWorkIndex](CutsceneWorkIndex) |      60 |      28 |       0 |        0 |
| [Cutscene](Cutscene) |      60 |      72 |       0 |        0 |
| [DawnContent](DawnContent) |       1 |       0 |       0 |        0 |
| [DawnMemberUIParam](DawnMemberUIParam) |       0 |       0 |       0 |        0 |
| [DawnQuestAnnounce](DawnQuestAnnounce) |       1 |       0 |       0 |        0 |
| [DawnQuestMember](DawnQuestMember) |       5 |       0 |       0 |        0 |
| [DefaultTalk](DefaultTalk) |     136 |      12 |       0 |        0 |
| [DescriptionPage](DescriptionPage) |      29 |       9 |       0 |        0 |
| [DescriptionSection](DescriptionSection) |       6 |       0 |       0 |        0 |
| [DescriptionString](DescriptionString) |      74 |       8 |       0 |        0 |
| [Description](Description) |       3 |       0 |       0 |        0 |
| [DisposalShopItem](DisposalShopItem) |      25 |       0 |       0 |        0 |
| [DisposalShop](DisposalShop) |       1 |       1 |       0 |        0 |
| [DpsChallengeOfficer](DpsChallengeOfficer) |       0 |       1 |       0 |        0 |
| [DpsChallengeTransient](DpsChallengeTransient) |       6 |       0 |       0 |        0 |
| [DpsChallenge](DpsChallenge) |       6 |       1 |       0 |        0 |
| [ENpcBase](ENpcBase) |     988 |     312 |       0 |        0 |
| [ENpcResident](ENpcResident) |     988 |     201 |       0 |        0 |
| [EObjName](EObjName) |      91 |       0 |       0 |        0 |
| [EObj](EObj) |      91 |       1 |       0 |        0 |
| [EmjAddon](EmjAddon) |       0 |       2 |       0 |        0 |
| [EmoteMode](EmoteMode) |       2 |       3 |       0 |        0 |
| [Emote](Emote) |      20 |      10 |       0 |        0 |
| [EventItemHelp](EventItemHelp) |       8 |       2 |       0 |        0 |
| [EventItem](EventItem) |       8 |       5 |       0 |        0 |
| [EventSystemDefine](EventSystemDefine) |       7 |       0 |       0 |        0 |
| [ExportedSG](ExportedSG) |      80 |       2 |       0 |        0 |
| [FCAuthority](FCAuthority) |       0 |       1 |       0 |        0 |
| [FateEvent](FateEvent) |       0 |       1 |       0 |        0 |
| [Fate](Fate) |      40 |       3 |       0 |        0 |
| [FishParameter](FishParameter) |      26 |      89 |       0 |        0 |
| [FishingSpot](FishingSpot) |      17 |      11 |       0 |        0 |
| [FurnitureCatalogItemList](FurnitureCatalogItemList) |      35 |       0 |       0 |        0 |
| [GardeningSeed](GardeningSeed) |       1 |       0 |       0 |        0 |
| [GatheringItemLevelConvertTable](GatheringItemLevelConvertTable) |      30 |       0 |       0 |        0 |
| [GatheringItemPoint](GatheringItemPoint) |      84 |      94 |       8 |        0 |
| [GatheringItem](GatheringItem) |     127 |      16 |       0 |        0 |
| [GatheringNotebookList](GatheringNotebookList) |      18 |      11 |       0 |        0 |
| [GatheringPointBase](GatheringPointBase) |      50 |      34 |       0 |        0 |
| [GatheringPointBonusType](GatheringPointBonusType) |       1 |       2 |       0 |        0 |
| [GatheringPointBonus](GatheringPointBonus) |       0 |     215 |       0 |        0 |
| [GatheringPointTransient](GatheringPointTransient) |     271 |      53 |       0 |        0 |
| [GatheringPoint](GatheringPoint) |     271 |      78 |       0 |        0 |
| [GatheringRarePopTimeTable](GatheringRarePopTimeTable) |      12 |       0 |       0 |        0 |
| [GatheringSubCategory](GatheringSubCategory) |     119 |      12 |       0 |        0 |
| [GeneralAction](GeneralAction) |       0 |       1 |       0 |        0 |
| [GilShopItem](GilShopItem) |      83 |      67 |       0 |        0 |
| [GilShop](GilShop) |       4 |       2 |       0 |        0 |
| [GimmickAccessor](GimmickAccessor) |      17 |       0 |       0 |        0 |
| [GimmickJump](GimmickJump) |       1 |       0 |       0 |        0 |
| [GimmickRect](GimmickRect) |     118 |       0 |       0 |        0 |
| [GroupPoseFrame](GroupPoseFrame) |       0 |       0 |       0 |        0 |
| [GroupPoseStampCategory](GroupPoseStampCategory) |       5 |       7 |       0 |        0 |
| [GroupPoseStamp](GroupPoseStamp) |     250 |      91 |       0 |        0 |
| [GuidePageString](GuidePageString) |       0 |       1 |       0 |        0 |
| [GuidePage](GuidePage) |       0 |      20 |       0 |        0 |
| [Guide](Guide) |       0 |       2 |       0 |        0 |
| [HWDAnnounce](HWDAnnounce) |      33 |       0 |       0 |        0 |
| [HWDCrafterSupplyReward](HWDCrafterSupplyReward) |      36 |       0 |       0 |        0 |
| [HWDCrafterSupply](HWDCrafterSupply) |       0 |       0 |       0 |        0 |
| [HWDDevLayerControl](HWDDevLayerControl) |      33 |       1 |       0 |        0 |
| [HWDDevLevelUI](HWDDevLevelUI) |      33 |       0 |       0 |        0 |
| [HWDDevLively](HWDDevLively) |     788 |       0 |       0 |        0 |
| [HWDDevProgress](HWDDevProgress) |     131 |       2 |       0 |        0 |
| [HWDGathererInspectionReward](HWDGathererInspectionReward) |      60 |       0 |       0 |        0 |
| [HWDGathererInspection](HWDGathererInspection) |       0 |       1 |       0 |        0 |
| [HWDInfoBoardArticleTransient](HWDInfoBoardArticleTransient) |      22 |       0 |       0 |        0 |
| [HWDInfoBoardArticle](HWDInfoBoardArticle) |      22 |       0 |       0 |        0 |
| [HWDLevelChangeDeception](HWDLevelChangeDeception) |      33 |       0 |       0 |        0 |
| [HWDSharedGroupControlParam](HWDSharedGroupControlParam) |     135 |       0 |       0 |        0 |
| [HWDSharedGroup](HWDSharedGroup) |      57 |       0 |       0 |        0 |
| [HousingExterior](HousingExterior) |      12 |       0 |       0 |        0 |
| [HousingFurniture](HousingFurniture) |      35 |      10 |       0 |        0 |
| [HousingUnitedExterior](HousingUnitedExterior) |       3 |       0 |       0 |        0 |
| [HousingYardObject](HousingYardObject) |       8 |      10 |       0 |        0 |
| [HowToPage](HowToPage) |       3 |      11 |       0 |        0 |
| [HowTo](HowTo) |       3 |       6 |       0 |        0 |
| [IKDContentBonus](IKDContentBonus) |      23 |      16 |       0 |        0 |
| [IKDFishParam](IKDFishParam) |      60 |       6 |       0 |        0 |
| [IKDRouteTable](IKDRouteTable) |      72 |      36 |       0 |        0 |
| [IKDRoute](IKDRoute) |       6 |       0 |       0 |        0 |
| [IKDSpot](IKDSpot) |       3 |       0 |       0 |        0 |
| [InstanceContentCSBonus](InstanceContentCSBonus) |       0 |       4 |       0 |        0 |
| [InstanceContentGuide](InstanceContentGuide) |      10 |       0 |       0 |        0 |
| [InstanceContentTextData](InstanceContentTextData) |     423 |      79 |       0 |        0 |
| [InstanceContent](InstanceContent) |      28 |      22 |       0 |        0 |
| [ItemAction](ItemAction) |       0 |      72 |       0 |        0 |
| [ItemBarterCheck](ItemBarterCheck) |       0 |       9 |       0 |        0 |
| [ItemFood](ItemFood) |      20 |       5 |       0 |        0 |
| [ItemLevel](ItemLevel) |       0 |      10 |       0 |        0 |
| [ItemSeries](ItemSeries) |       2 |       0 |       0 |        0 |
| [ItemSortCategory](ItemSortCategory) |       3 |       0 |       0 |        0 |
| [ItemSpecialBonus](ItemSpecialBonus) |       0 |       1 |       0 |        0 |
| [ItemUICategory](ItemUICategory) |       0 |       0 |       0 |        0 |
| [Item](Item) |    1487 |   30581 |       0 |        0 |
| [JobHudManualPriority](JobHudManualPriority) |       0 |       2 |       0 |        0 |
| [JobHudManual](JobHudManual) |       0 |       2 |       0 |        0 |
| [JournalCategory](JournalCategory) |       1 |      87 |       0 |        0 |
| [JournalGenre](JournalGenre) |       4 |     206 |       0 |        0 |
| [Knockback](Knockback) |       9 |       3 |       0 |        0 |
| [LegacyQuest](LegacyQuest) |       0 |     295 |       0 |        0 |
| [Leve](Leve) |       0 |       0 |       0 |        0 |
| [Level](Level) |     356 |     199 |      20 |        0 |
| [LogFilter](LogFilter) |       0 |       0 |       0 |        0 |
| [LogMessage](LogMessage) |       0 |      91 |       0 |        0 |
| [LotteryExchangeShop](LotteryExchangeShop) |       0 |       0 |       0 |        0 |
| [MYCTemporaryItem](MYCTemporaryItem) |      13 |       0 |       0 |        0 |
| [MYCWarResultNotebook](MYCWarResultNotebook) |       8 |       0 |       0 |        0 |
| [MapMarker](MapMarker) |     203 |       3 |       0 |        0 |
| [Map](Map) |      32 |       0 |       0 |        0 |
| [MasterpieceSupplyDuty](MasterpieceSupplyDuty) |       0 |     287 |       0 |        0 |
| [Materia](Materia) |     275 |       0 |       0 |        0 |
| [MiniGameRA](MiniGameRA) |       3 |       0 |       0 |        0 |
| [ModelChara](ModelChara) |       0 |      67 |       0 |        0 |
| [ModelSkeleton](ModelSkeleton) |      17 |       2 |       0 |        0 |
| [ModelState](ModelState) |       5 |       2 |       0 |        0 |
| [MotionTimelineBlendTable](MotionTimelineBlendTable) |       0 |       1 |       0 |        0 |
| [MotionTimeline](MotionTimeline) |     100 |      64 |       0 |        0 |
| [MountAction](MountAction) |       1 |       0 |       0 |        0 |
| [MountCustomize](MountCustomize) |       4 |       0 |       0 |        0 |
| [MountTransient](MountTransient) |      10 |       6 |       0 |        0 |
| [Mount](Mount) |      10 |       8 |       0 |        0 |
| [NotebookDivision](NotebookDivision) |       3 |       3 |       0 |        0 |
| [NpcEquip](NpcEquip) |       0 |      26 |       0 |        0 |
| [NpcYell](NpcYell) |     150 |      56 |       0 |        0 |
| [Omen](Omen) |      19 |       1 |       0 |        0 |
| [OpenContentCandidateName](OpenContentCandidateName) |       2 |       0 |       0 |        0 |
| [OpenContent](OpenContent) |       0 |       2 |       0 |        0 |
| [OrchestrionPath](OrchestrionPath) |      27 |       2 |       0 |        0 |
| [OrchestrionUiparam](OrchestrionUiparam) |      27 |       2 |       0 |        0 |
| [Orchestrion](Orchestrion) |      27 |      25 |       0 |        0 |
| [Ornament](Ornament) |       7 |       1 |       0 |        0 |
| [PerformTransient](PerformTransient) |       3 |       1 |       0 |        0 |
| [Perform](Perform) |       3 |       1 |       0 |        0 |
| [Picture](Picture) |       4 |       0 |       0 |        0 |
| [PlaceName](PlaceName) |      51 |      16 |       0 |        0 |
| [PlantPotFlowerSeed](PlantPotFlowerSeed) |       1 |       0 |       0 |        0 |
| [PreHandler](PreHandler) |       8 |       1 |       0 |        0 |
| [PublicContentCutscene](PublicContentCutscene) |       1 |       1 |       0 |        0 |
| [PublicContentTextData](PublicContentTextData) |     100 |       1 |       0 |        0 |
| [PublicContent](PublicContent) |       4 |       0 |       0 |        0 |
| [QuestBattle](QuestBattle) |       0 |       2 |       0 |        0 |
| [QuestChapter](QuestChapter) |      57 |      24 |       0 |        0 |
| [QuestClassJobReward](QuestClassJobReward) |      45 |       0 |       0 |        0 |
| [QuestDerivedClass](QuestDerivedClass) |      99 |       0 |      64 |        0 |
| [QuestRedoChapterUICategory](QuestRedoChapterUICategory) |      15 |       9 |       0 |        0 |
| [QuestRedoChapterUITab](QuestRedoChapterUITab) |       0 |       8 |       0 |        0 |
| [QuestRedoChapterUI](QuestRedoChapterUI) |       3 |     118 |       0 |        0 |
| [QuestRedoIncompChapter](QuestRedoIncompChapter) |      15 |       0 |       0 |        0 |
| [QuestRedo](QuestRedo) |       7 |      72 |       0 |        0 |
| [QuestRepeatFlag](QuestRepeatFlag) |       0 |       0 |       0 |        0 |
| [Quest](Quest) |      80 |      57 |       0 |        0 |
| [Race](Race) |       0 |       1 |       0 |        0 |
| [RecipeLookup](RecipeLookup) |     158 |       4 |       0 |        0 |
| [RecipeNotebookList](RecipeNotebookList) |       0 |      60 |       0 |        0 |
| [Recipe](Recipe) |     200 |    8127 |       0 |        0 |
| [RecommendContents](RecommendContents) |       2 |       0 |       0 |        0 |
| [Resident](Resident) |    1927 |   15225 |       0 |        0 |
| [RetainerTaskNormal](RetainerTaskNormal) |       0 |       6 |       0 |        0 |
| [RetainerTaskParameter](RetainerTaskParameter) |      40 |       0 |       0 |        0 |
| [RetainerTask](RetainerTask) |       0 |       6 |       0 |        0 |
| [SatisfactionSupply](SatisfactionSupply) |       0 |      54 |       0 |        0 |
| [ScenarioTree](ScenarioTree) |      10 |       0 |       0 |        0 |
| [ScreenImage](ScreenImage) |       0 |      33 |       0 |        0 |
| [SpearfishingNotebook](SpearfishingNotebook) |       8 |       6 |       0 |        0 |
| [SpecialShop](SpecialShop) |      25 |      72 |       0 |        0 |
| [StatusLoopVFX](StatusLoopVFX) |      63 |       0 |       0 |        0 |
| [Status](Status) |     180 |      32 |       0 |        0 |
| [Story](Story) |       6 |      23 |       0 |        0 |
| [SubmarineExploration](SubmarineExploration) |       0 |       5 |       0 |        0 |
| [SubmarineRank](SubmarineRank) |       5 |       0 |       0 |        0 |
| [SwitchTalkVariation](SwitchTalkVariation) |     122 |       4 |       0 |        0 |
| [SwitchTalk](SwitchTalk) |      39 |       1 |       0 |        0 |
| [TerritoryTypeTransient](TerritoryTypeTransient) |      42 |       4 |       0 |        0 |
| [TerritoryType](TerritoryType) |      42 |      10 |       0 |        0 |
| [TextCommand](TextCommand) |       9 |      34 |       0 |        0 |
| [Title](Title) |      27 |       0 |       0 |        0 |
| [TomestonesItem](TomestonesItem) |       1 |       3 |       0 |        0 |
| [TopicSelect](TopicSelect) |       0 |       0 |       0 |        0 |
| [TraitTransient](TraitTransient) |       0 |       8 |       0 |        0 |
| [Trait](Trait) |       0 |       9 |       0 |        0 |
| [Transformation](Transformation) |      50 |       6 |       0 |        0 |
| [Treasure](Treasure) |      50 |      23 |       0 |        0 |
| [TripleTriadCardResident](TripleTriadCardResident) |      12 |       1 |       0 |        0 |
| [TripleTriadCardType](TripleTriadCardType) |       0 |       0 |       1 |        0 |
| [TripleTriadCard](TripleTriadCard) |      12 |       1 |       0 |        0 |
| [TripleTriadRule](TripleTriadRule) |       1 |       2 |       0 |        0 |
| [TripleTriad](TripleTriad) |      10 |       0 |       0 |        0 |
| [VFX](VFX) |     124 |       0 |       0 |        0 |
| [VaseFlower](VaseFlower) |      79 |       6 |       1 |        0 |
| [Warp](Warp) |       2 |       4 |       0 |        0 |
| [WeaponTimeline](WeaponTimeline) |      60 |       7 |       0 |        0 |
| [WeeklyBingoOrderData](WeeklyBingoOrderData) |       0 |       3 |       0 |        0 |
| [WeeklyBingoRewardData](WeeklyBingoRewardData) |       0 |     126 |       0 |        0 |
| [YardCatalogItemList](YardCatalogItemList) |       9 |       1 |       0 |        0 |
| [ZoneSharedGroup](ZoneSharedGroup) |       7 |       1 |       0 |        0 |